--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="str_title_info_set">信息设置</string>
     <string name="str_title_payment_express">充值</string>
     <string name="str_title_my_account">我的账户</string>
-    <string name="str_title_mall_type">商城种类</string>
+    <string name="str_title_mall_type">快递商城</string>
     <string name="str_title_recharge_type">充值记录</string>
     <string name="str_title_place_order_edit">下单</string>
     <string name="str_title_offer">报价列表</string>
